--- a/Website/Static/bootstrap.css
+++ b/Website/Static/bootstrap.css
@@ -142,10 +142,13 @@ h2, .h2 {
 
 h3, .h3 {
   font-size: calc(1.3rem + 0.6vw);
+  text-align: center;
+  
 }
 @media (min-width: 1200px) {
   h3, .h3 {
     font-size: 1.75rem;
+    text-align: center;
   }
 }
 
