--- a/Website/templates/machine_learning.html
+++ b/Website/templates/machine_learning.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 
+    <script src="static/js/app.js"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <link rel="stylesheet" href="static/css/style.css">
@@ -51,10 +53,157 @@
     <div class="intro">
       <h1>Make A Movie</h1>
       <p>Select from the following menu to generate your own movie!</p>
-       <form action="index.html">
-         <button type="submit">Will you win?</button>
-      </form>
+
     </div>
+
+    <div class="container">
+      <div class="card border-primary mb-3">
+          <div class="card-header">Filters</div>
+          <div class="card-body">
+              <div class="row">
+                  <div class="col-md-3">
+                      <div class="form-group">
+                          <label class="col-form-label" for="budget">Budget</label>
+                          <input type="text" class="form-control" value="300000" id="budget">
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                          <label class="col-form-label" for="popularity">Popularity</label>
+                          <input type="text" class="form-control" value="20" id="popularity">
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                          <label class="col-form-label" for="revenue">Revenue</label>
+                          <input type="text" class="form-control" value="500000" id="revenue">
+                      </div>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                          <label class="col-form-label" for="runtime">Runtime (minutes)</label>
+                          <input type="text" class="form-control" value="125" id="runtime">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label class="col-form-label" for="vote_count">IMDB Votes</label>
+                            <input type="text" class="form-control" value="700" id="vote_count">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="form-group">
+                            <label class="col-form-label" for="release_year">Year Released</label>
+                            <input type="text" class="form-control" value="2020" id="release_year">
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="form-group">
+                            <label class="col-form-label" for="release_month">Month Released</label>
+                            <select id="gender">
+                              <option value="1">January</option>
+                              <option value="2">February</option>
+                              <option value="3">March</option>
+                              <option value="4">April</option>
+                              <option value="5">May</option>
+                              <option value="6">June</option>
+                              <option value="7" selected>July</option>
+                              <option value="8">August</option>
+                              <option value="9">September</option>
+                              <option value="10">October</option>
+                              <option value="11">November</option>
+                              <option value="12">December</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-md-3">
+                        <div class="form-group">
+                            <label class="col-form-label" for="release_is_weekend">Released on the Weekend</label>
+                            <select id="release_is_weekend">
+                              <option value="1" selected>True</option>
+                              <option value="0">False</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-3">
+                          <div class="form-group">
+                              <label class="col-form-label" for="genre">Genres</label>
+                              <select id="genre">
+                                  <option selected>Horror</option>
+                                  <option>Comedy</option>
+                                  <option>Horror</option>
+                                  <option>Comedy</option>
+                                  <option>Horror</option>
+                                  <option>Comedy</option>
+                                  <option>Horror</option>
+                                  <option>Comedy</option>
+                                  <option>Horror</option>
+                                  <option>Comedy</option>
+                                  <option>Horror</option>
+                                  <option>Comedy</option>
+                              </select>
+                          </div>
+                        </div>
+                        <div class="col-md-3">
+                          <div class="form-group">
+                              <label class="col-form-label" for="production_company">Production Company</label>
+                              <select id="production_company">
+                                <option selected>Columbia Pictures</option>
+                                <option>Other</option>
+                            </select>
+                          </div>
+                        </div>
+                        <div class="col-md-3">
+                          <div class="form-group">
+                              <label class="col-form-label" for="production_country">Production Country</label>
+                              <select id="production_country">
+                                <option selected>United States of America</option>
+                                <option>Canada</option>
+                            </select>
+                          </div>
+                        </div>
+                        <div class="col-md-3">
+                          <div class="form-group">
+                              <label class="col-form-label" for="spoken_language">Spoken Language</label>
+                              <select id="spoken_language">
+                                <option selected>English</option>
+                                <option>Español</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                <div class="row">
+                  <div class="col-md-12">
+                      <button type="button" class="btn btn-primary" id="filter">Make Prediction!</button>
+                  </div>
+                </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  <hr style="color:lightgray; border-width: 3px;">
+  <div class="container-fluid">
+      <div class="row">
+          <div class="col-md-12">
+              <h1 id="output"></h1>
+          </div>
+      </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
     <div class="project">
       <div class="work">
         <i class="fas fa-project-diagram"></i>
