--- a/Website/templates/machine_learning.html
+++ b/Website/templates/machine_learning.html
@@ -102,7 +102,7 @@
                       <div class="col-md-3">
                         <div class="form-group">
                             <label class="col-form-label" for="release_month">Month Released</label>
-                            <select id="gender">
+                            <select id="release_month">
                               <option value="1">January</option>
                               <option value="2">February</option>
                               <option value="3">March</option>
