--- a/Website/templates/machine_learning.html
+++ b/Website/templates/machine_learning.html
@@ -135,16 +135,15 @@
                               <select id="genre">
                                   <option selected>Horror</option>
                                   <option>Comedy</option>
-                                  <option>Horror</option>
-                                  <option>Comedy</option>
-                                  <option>Horror</option>
-                                  <option>Comedy</option>
-                                  <option>Horror</option>
-                                  <option>Comedy</option>
-                                  <option>Horror</option>
-                                  <option>Comedy</option>
-                                  <option>Horror</option>
-                                  <option>Comedy</option>
+                                  <option>Drama</option>
+                                  <option>Action</option>
+                                  <option>Crime</option>
+                                  <option>Documentary</option>
+                                  <option>Adventure</option>
+                                  <option>Animation</option>
+                                  <option>Fantasy</option>
+                                  <option>Romance</option>
+                                  <option>Other</option>
                               </select>
                           </div>
                         </div>
@@ -154,6 +153,18 @@
                               <select id="production_company">
                                 <option selected>Columbia Pictures</option>
                                 <option>Other</option>
+                                <option>Paramount Pictures</option>
+                                <option>Metro-Goldwyn-Mayer (MGM)</option>
+                                <option>Warner Bros.</option>
+                                <option>Twentieth Century Fox Film Corporation</option>
+                                <option>Universal Pictures</option>
+                                <option>Walt Disney Pictures</option>
+                                <option>RKO Radio Pictures</option>
+                                <option>United Artists</option>
+                                <option>New Line Cinema</option>
+                                <option>Lions Gate Films </option>
+                                <option>Mosfilm</option>
+                                <option>BBC Films</option>
                             </select>
                           </div>
                         </div>
@@ -163,6 +174,12 @@
                               <select id="production_country">
                                 <option selected>United States of America</option>
                                 <option>Canada</option>
+                                <option>Other</option>
+                                <option>France</option>
+                                <option>United Kingdom</option>
+                                <option>Japan</option>
+                                <option>Germany</option>
+                                <option>Italy</option>
                             </select>
                           </div>
                         </div>
@@ -171,7 +188,14 @@
                               <label class="col-form-label" for="spoken_language">Spoken Language</label>
                               <select id="spoken_language">
                                 <option selected>English</option>
+                                <option>Other</option>
+                                <option>Français</option>
+                                <option>Italiano</option>
+                                <option>Japanese</option>
+                                <option>Deutsch</option>
                                 <option>Español</option>
+                                <option>Russian</option>
+                                <option>Chinese</option>
                             </select>
                           </div>
                         </div>
