--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -56,76 +56,150 @@
     </div>
   </nav>
 
-  <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Violin Charts</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+
+    <div class="project">
+      <div class="work">
+        <i class="fas fa-project-diagram"></i>
+        <p class="work-heading">Project</p>
+        <p class="work-text">We decided to do our project over the success rates of movies to see what contributes to a movies success the most.</p>
+      </div>
+      <div class="work">
+        <i class="fas fa-bullseye"></i>
+        <p class="work-heading">Objective</p>
+        <p class="work-text">Our goal is to give a fun, interactive page that shows users how success a movie can be.</p>
+      </div>
+      <div class="work">
+        <i class="fas fa-digital-tachograph"></i>
+        <p class="work-heading">Deliverables</p>
+        <p class="work-text">As a way to display our findings, we have provided several interactive graphs and a map.</p>
       </div>
     </div>
-    <br>
-    <br>
-
-    <div class="row">
-      <div class="col-md-4">
-        <div class="well">
-          <h5>Select Type</h5>
-          <select id="selDataset"></select>
-        </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-          </div>
-          <div id="" class="panel-body"></div>
-        </div>
+    <div class="about-volcanoes">
+      <div class="about-volcanoes-text">
+        <h2>About the data</h2>
+        <p>And a more detail description to what the user gets to experiment with to make a movie</p>
       </div>
-      <div class="col-md-4">
-        <div class="well">
-          <h5>Select Type</h5>
-          <select id="selDataset1"></select>
-        </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-          </div>
-          <div id="" class="panel-body"></div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="well">
-          <h5>&nbsp</h5>
-          <button id="filter-btn" type="button">Submit</button>
-        </div>
-      </div>
+      <!--<img src= pictures/film.jpg>-->
     </div>
+  </main>
+</body>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
-    <br>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card bg-light">
-          <div class="card-body">
-            <h2>Summit by Volcano Type</h2>
-            <hr>
-            <div id="violin1"></div>
-          </div>
-        </div>
-      </div>
-    </div>
+    body {
+      margin: 0;
+      box-sizing: border-box;
+    }
 
-    <br>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card bg-light">
-          <div class="card-body">
-            <h2>Elevation by Volcano Type</h2>
-            <hr>
-            <div id="violin2"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+    /* CSS for main element */
+    .intro {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 520px;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("pictures/film.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
 
-  <br>
+    .intro h1 {
+      font-family: sans-serif;
+      font-size: 60px;
+      color: #fff;
+      font-weight: bold;
+      text-transform: uppercase;
+      margin: 0;
+    }
+
+    .intro p {
+      font-size: 20px;
+      color: #d1d1d1;
+      text-transform: uppercase;
+      margin: 20px 0;
+    }
+
+    .intro button {
+      background-color: #E50914;
+      color: #000;
+      padding: 10px 25px;
+      border: none;
+      border-radius: 5px;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4)
+    }
+
+    .project {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 40px 80px;
+    }
+
+    .project .work {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0 40px;
+    }
+
+    .project .work i {
+      width: fit-content;
+      font-size: 50px;
+      color: #333333;
+      border-radius: 50%;
+      border: 2px solid #333333;
+      padding: 12px;
+    }
+
+    .project .work .work-heading {
+      font-size: 20px;
+      color: #333333;
+      text-transform: uppercase;
+      margin: 10px 0;
+    }
+
+    .project .work .work-text {
+      font-size: 15px;
+      color: #585858;
+      margin: 10px 0;
+    }
+
+    .about-volcanoes {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 40px 80px;
+      border-top: 2px solid #eeeeee;
+    }
+
+    .about-volcanoes img {
+      width: 500px;
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    .about-volcanoes-text h2 {
+      font-size: 30px;
+      color: #333333;
+      text-transform: uppercase;
+      margin: 0;
+    }
+
+    .about-volcanoes-text p {
+      font-size: 15px;
+      color: #585858;
+      margin: 10px 0;
+    }
+    
+  </style>
+</html>
 
 
 </body>
