--- a/Website/Static/css/style.css
+++ b/Website/Static/css/style.css
@@ -1,32 +1,111 @@
-.padding {
-    width:80%;
-    height:40%;
-    padding: 5%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.node:hover{
-    stroke-width: 7px !important;
-    opacity: 1 !important;
-  }
-  .Legend div{
-    margin-left:15px;
-    width: 12px;
-    height: 12px;
-    border:1px solid #808080;
-}
-.ie7 .Legend div{
-    display:inline;
-    zoom:1;
-}
-.Midwest { background-color: #B7A4C2; }
-.Northeast { background-color: #B080CC; }
-.Other { background-color: #9370DB; }
-.South { background-color: #642592; }
-.USTerr { background-color: #8B008B; }
-.West { background-color: #000000; }
+    body {
+      margin: 0;
+      box-sizing: border-box;
+    }
 
-#map{
-    height: 800px;
-}
+    /* CSS for main element */
+    .intro {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 520px;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%), url("pictures/film.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    .intro h1 {
+      font-family: sans-serif;
+      font-size: 60px;
+      color: #fff;
+      font-weight: bold;
+      text-transform: uppercase;
+      margin: 0;
+    }
+
+    .intro p {
+      font-size: 20px;
+      color: #d1d1d1;
+      text-transform: uppercase;
+      margin: 20px 0;
+    }
+
+    .intro button {
+      background-color: #E50914;
+      color: #000;
+      padding: 10px 25px;
+      border: none;
+      border-radius: 5px;
+      font-size: 20px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.4)
+    }
+
+    .project {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 40px 80px;
+    }
+
+    .project .work {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0 40px;
+    }
+
+    .project .work i {
+      width: fit-content;
+      font-size: 50px;
+      color: #ffcc00;
+      border-radius: 50%;
+      border: 2px solid #333333;
+      padding: 12px;
+    }
+
+    .project .work .work-heading {
+      font-size: 20px;
+      color: #ffcc00;
+      text-transform: uppercase;
+      margin: 10px 0;
+    }
+
+    .project .work .work-text {
+      font-size: 15px;
+      color: #ffcc00;
+      margin: 10px 0;
+    }
+
+    .about-volcanoes {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 40px 80px;
+      border-top: 2px solid #eeeeee;
+    }
+
+    .about-volcanoes img {
+      width: 500px;
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    .about-volcanoes-text h2 {
+      font-size: 30px;
+      color: #ffcc00;
+      text-transform: uppercase;
+      margin: 0;
+    }
+
+    .about-volcanoes-text p {
+      font-size: 15px;
+      color: #ffcc00;
+      margin: 10px 0;
+    }
