--- a/Website/Static/css/style.css
+++ b/Website/Static/css/style.css
@@ -20,7 +20,7 @@
     .intro h1 {
       font-family: sans-serif;
       font-size: 60px;
-      color: #fff;
+      color: #ffcc00;
       font-weight: bold;
       text-transform: uppercase;
       margin: 0;
@@ -28,7 +28,7 @@
 
     .intro p {
       font-size: 20px;
-      color: #d1d1d1;
+      color: #ffcc00;
       text-transform: uppercase;
       margin: 20px 0;
     }
@@ -108,4 +108,9 @@
       font-size: 15px;
       color: #ffcc00;
       margin: 10px 0;
+    }
+
+    .movie-container {
+      background: inherit;
+      color: #ffcc00;
     }
