--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -56,7 +56,10 @@
     </div>
   </nav>
 
-
+  <div class="intro">
+    <h1>Make A Movie</h1>
+    <p>Select from the following menu to generate your own movie!</p>
+  </div>
     <div class="project">
       <div class="work">
         <i class="fas fa-project-diagram"></i>
