--- a/Website/templates/tableau.html
+++ b/Website/templates/tableau.html
@@ -55,10 +55,9 @@
       </div>
     </div>
   </nav>
-
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-12 jumbotron text-center">
+          <div class="col-md-12 jumbotron text-center movie-container">
             <h1>Movie Visualizations</h1>
             <br>
             <p>This dashboard shows a budget versus revenue, production company locations, and genre popularity charts. The filters applied to the visualizations are spoken language and production company.</p>
@@ -73,7 +72,7 @@
           </div>
         </div>
       </div>
-    </div>
+
 </body>
 
 </html>
