--- a/Website/templates/pdf.html
+++ b/Website/templates/pdf.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-6">
                     <h1 class="title text-center">Final Paper</h1>
-                    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTsPiEaSrSwpPyCPLBeNU9yaMC37bROEy7y7uGLc_HRwAZVAZ6tNNNRI7x5OXs4AfjwSLhpZk_qxJ3K/pub?embedded=true" width="100%" height="600"></iframe>
+                    <iframe src="https://docs.google.com/document/d/1CE3zpsGwV8YbPUsk-NnEf5EdCo-Y3IYbjYMMzxkiPfY" width="100%" height="600"></iframe>
                 </div>
                 <div class="col-md-3">
                     
