--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -57,8 +57,12 @@
   </nav>
 
   <div class="intro">
-    <h1>Make A Movie</h1>
-    <p>Select from the following menu to generate your own movie!</p>
+    <h1>Let's Make A Movie</h1>
+    <div class="project">
+      <div class="work">
+      <p class="work-text">Welcome to our Movie Generator project. The navigation bar can be used to move between our various data visualizations: three tableau pages and a machine learning program. We also have provided our intial data sources and a summary of the project</p>
+      </div>
+    </div>
   </div>
     <div class="project">
       <div class="work">
