home page updates

--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -57,10 +57,13 @@
   </nav>
 
   <div class="intro">
-    <h1>Let's Make A Movie</h1>
+    <h1>Let's Make Movies!</h1>
     <div class="project">
       <div class="work">
-      <p class="work-text">Welcome to our Movie Generator project. The navigation bar can be used to move between our various data visualizations: three tableau pages and a machine learning program. We also have provided our intial data sources and a summary of the project</p>
+      <p class="work-text">Welcome to our movie visualization project.</p>
+      <p class="work-text">The navigation bar can be used to move between our various data visualizations: three tableau dashboards and a machine learning program.</p>
+      <p class="work-text">We have also included a page containing our intial data resources, a summary of our project, and an about us.</p>
+      <p class="work-text">We hope you enjoy!</p>
       </div>
     </div>
   </div>
@@ -73,18 +76,18 @@
       <div class="work">
         <i class="fas fa-bullseye"></i>
         <p class="work-heading">Objective</p>
-        <p class="work-text">Our goal is to give a fun, interactive page that shows users how success a movie can be.</p>
+        <p class="work-text">Our goal is to give a fun, interactive page that shows users how successful a movie can be.</p>
       </div>
       <div class="work">
         <i class="fas fa-digital-tachograph"></i>
         <p class="work-heading">Deliverables</p>
-        <p class="work-text">As a way to display our findings, we have provided several interactive graphs and a map.</p>
+        <p class="work-text">As a way to display our findings, we have provided several interactive graphs and a generator.</p>
       </div>
     </div>
     <div class="about-volcanoes">
       <div class="about-volcanoes-text">
         <h2>About the data</h2>
-        <p>And a more detail description to what the user gets to experiment with to make a movie</p>
+        <p>The data supplies our users with a variety of selections from genres to budget of a movie to experience making their own movie, try it out and see if your movie is successful!</p>
       </div>
       <!--<img src= pictures/film.jpg>-->
     </div>
