--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -57,7 +57,7 @@
   </nav>
 
   <div class="intro">
-    <h1>Let's Make Movies!</h1>
+    <h1>Movie Magic</h1>
     <div class="project">
       <div class="work">
       <p class="work-text">Welcome to our movie visualization project.</p>
